force-app/main/default/objects/Loan_Application__c/fields/Applicant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Contact applying for the loan.</description>
    <label>Applicant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>