force-app/main/default/objects/Loan_Application__c/listViews/All_Submitted_Loans.listView-meta.xml
<ListView>
    <fullName>All_Submitted_Loans</fullName>
    <columns>NAME</columns>
    <columns>Applicant_Contact__c</columns>
    <columns>Loan_Amount__c</columns>
    <columns>Loan_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Loan_Status__c</field>
        <operation>equals</operation>
        <value>Submitted,Under Review</value>
    </filters>
    <label>All Submitted Loans</label>
</ListView>